{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 203,
  "lineage": "64b841d3-9db2-87e6-457c-ffb10711ecdd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:159843168358:instance/i-0f80a1d236c8dbf17",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f80a1d236c8dbf17",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f58129389f10e10c",
            "private_dns": "ip-10-0-0-117.eu-west-2.compute.internal",
            "private_ip": "10.0.0.117",
            "public_ip": "35.178.18.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0e72e151ada5c2129",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045ba4b416e590d1a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035338919951872ce"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00b1550924e169e12",
            "owner_id": "159843168358",
            "vpc_id": "vpc-069fb50578e5d4c27"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aa334dd9905f317",
            "original_route_table_id": "rtb-0a438e8ed45c7f492",
            "route_table_id": "rtb-0a97f24aff44e0720",
            "vpc_id": "vpc-069fb50578e5d4c27"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a97f24aff44e0720",
            "owner_id": "159843168358",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b1550924e169e12",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-069fb50578e5d4c27"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:159843168358:security-group/sg-035338919951872ce",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035338919951872ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "159843168358",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-069fb50578e5d4c27"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:159843168358:subnet/subnet-045ba4b416e590d1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-045ba4b416e590d1a",
            "map_public_ip_on_launch": false,
            "owner_id": "159843168358",
            "vpc_id": "vpc-069fb50578e5d4c27"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:159843168358:vpc/vpc-069fb50578e5d4c27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060a502f2db529c45",
            "default_route_table_id": "rtb-0a438e8ed45c7f492",
            "default_security_group_id": "sg-07b6146ad08dc66c7",
            "dhcp_options_id": "dopt-b77334df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-069fb50578e5d4c27",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a438e8ed45c7f492",
            "owner_id": "159843168358"
          }
        }
      ]
    }
  ]
}